material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/guide-list/guide-list.scss
@import '../../../styles/constants';

:host {
  min-height: 100%;
}

.docs-guide {
  min-height: 100%;
}

.docs-guide-list {
  display: flex;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
  padding-top: 15px;
}

.docs-guide-item {
  text-decoration: none;

  display: flex;
  margin: 15px;
}

.docs-guide-card.mat-card {
  text-align: center;
  width: 210px;
  height: 210px;
}

.docs-guide-card .mat-card-title {
  height: 33%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 22px;
}


.docs-guide-card-divider {
  width: 40%;
  height: 7px;
  margin: 15px auto;
}

